--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "next": "^10.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
   }
 }
