--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "NextSite",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/kento-yoshidu/NextSite.git",
-  "author": "kento <kento@toriwatari.bird>",
-  "license": "MIT",
-  "dependencies": {
-    "next": "^10.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
+  "name": "nextjs-graphcms-site",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "11.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   }
 }
