--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "create-next-app": "^11.1.2",
+    "graphql-request": "^3.6.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
