--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "create-next-app": "^11.1.2",
+    "graphql": "^15.6.1",
     "graphql-request": "^3.6.0",
     "next": "11.1.2",
     "react": "17.0.2",
