--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react": "^17.0.30",
     "create-next-app": "^11.1.2",
     "graphql": "^15.6.1",
     "graphql-request": "^3.6.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
